--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
+    "axios": "^1.3.4",
     "expo": "^47.0.13",
     "expo-app-loading": "~2.1.1",
     "expo-constants": "~14.0.2",
