--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-elements": "^3.4.3",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-search-bar": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
